--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "e2e": "cypress open"
   },
   "dependencies": {
     "next": "15.2.4",
@@ -27,6 +28,7 @@
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "3.0.9",
+    "cypress": "^14.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "jsdom": "^26.0.0",
